--- a/ols-web/src/main/resources/application.properties
+++ b/ols-web/src/main/resources/application.properties
@@ -3,19 +3,9 @@ ols.solr.search.core ontology
 ols.solr.suggest.core autosuggest
 spring.data.mongodb.database ols
 
-# Date to start maintenance mode
-#ols.maintenance.start 2016-10-07 08:00:00
-# Date to end maintenance mode
-#ols.maintenance.end 2016-10-07 12:00:00
+obo.db.xrefs https://raw.githubusercontent.com/geneontology/go-site/a94d68f4e57264db2ff3692866a680c3fb9dda9d/metadata/db-xrefs.yaml
 
-# stop access to /search api under maintenance
-#ols.maintenance.solr false
 
-# stop access to /terms api under maintenance
-#ols.maintenance.neo4j false
-
-# stop access to /ontologies metadata api under maintenance
-#ols.maintenance.mongo true
-
-# optional message to show under maintenance
-#ols.maintenance.message
+ols.home /opt/ols
+ols.obofoundry.ontology.config file:/opt/ols/obo-config.yaml
+ols.ontology.config file:/opt/ols/ols-config.yaml
